# llm-summarizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: text.py
training/: dataset.py  hf_agent.py  trainer.py
training/config/: parameters.py  processing.py  variables.py
training/data/: training_dataset.parquet.gzip
