[tool.poetry]
name = "llm-summarizer"
version = "0.1.0"
description = ""
authors = ["Jean Philippe Petit-Frere <jeanphilippe.petitfrere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
datasets = "^2.21.0"
torch = "^2.4.0"
peft = "^0.12.0"
scikit-learn = "^1.5.1"
optimum = "^1.21.4"
trl = "^0.10.1"
optimum-quanto = "^0.2.4"
pre-commit = "^3.8.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
